tests/algorithms/transpiler/Zig/graphs/tarjans_scc.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/tarjans_scc.zig:86:234: error: cannot assign to constant